Fix rendering on smaller resolutions

--- a/frontend-angular/src/app/components/authenticated-layout/authenticated-layout.component.scss
+++ b/frontend-angular/src/app/components/authenticated-layout/authenticated-layout.component.scss
@@ -7,6 +7,10 @@
   flex-direction: column;
 }
 
+mat-sidenav-content {
+  max-width: calc(100vw - 361px);
+}
+
 mat-toolbar {
   display: block;
 }
