--- a/frontend-angular/src/app/components/view-wrapper/view-wrapper.component.scss
+++ b/frontend-angular/src/app/components/view-wrapper/view-wrapper.component.scss
@@ -5,6 +5,7 @@
   justify-self: center;
   padding: 0 1rem;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 //:host {
