--- a/frontend-angular/src/app/views/balance/balance-view/balance-view.component.scss
+++ b/frontend-angular/src/app/views/balance/balance-view/balance-view.component.scss
@@ -6,6 +6,7 @@
 :host {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 .paid h3, .paid p{
