--- a/frontend-angular/src/app/views/orders/all-orders-view/all-orders-view.component.scss
+++ b/frontend-angular/src/app/views/orders/all-orders-view/all-orders-view.component.scss
@@ -1,6 +1,7 @@
 @use '@angular/material' as mat;
 
 :host {
+  display: flex;
   width: 100%;
   height: 100%;
 }
