--- a/frontend-angular/src/app/views/orders/create-order-view/create-order-view.component.scss
+++ b/frontend-angular/src/app/views/orders/create-order-view/create-order-view.component.scss
@@ -1,6 +1,7 @@
 :host {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 
