--- a/frontend-angular/src/app/views/restaurants/show-restaurant-view/show-restaurant-view.component.scss
+++ b/frontend-angular/src/app/views/restaurants/show-restaurant-view/show-restaurant-view.component.scss
@@ -3,6 +3,7 @@
 :host {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 @media (min-width: utils_breakpoints.$md) {
